# bella-issues-bot

./: .engignore.example  .env.example  README.en.md  README.md  file_selection_example.toml  generate.py  log_config.py  pyproject.toml  quick-start.en.md  quick-start.md  requirements.txt  test.py
.eng/: .engignore
.eng/memory/: file_details.txt  git_id
.eng/memory/issues/#1/: file_selected.txt
.eng/memory/issues/#1/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#1/round_2/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#11/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#12/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#2/: file_selected.txt
.eng/memory/issues/#2/round_1/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/: file_selected.txt
.eng/memory/issues/#3/round_1/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/round_2/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/round_3/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/round_4/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/round_5/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#3/round_6/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#4/: file_selected.txt
.eng/memory/issues/#4/round_1/: ai_response.txt  system_prompt.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#5/: file_selected.txt
.eng/memory/issues/#5/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#5/round_2/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#5/round_3/: ai_response.txt  modified_files.txt  system_prompt.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#5/round_4/: ai_response.txt  system_prompt.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#5/round_5/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/issues/#8/round_1/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#1/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#1/round_2/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#2/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#2/round_2/: ai_response.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#3/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#3/round_2/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#3/round_3/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#4/rollback/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#4/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#4/round_2/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.eng/memory/queries/#5/round_1/: ai_response.txt  modified_files.txt  timestamp.txt  user_prompt.txt
.github/workflows/: issue_process.yml  memory_init.yml
.gpteng/: file_selection.toml
.gpteng/memory/: file_details.txt  git_id
client/: README.md  README_FILE_MEMORY.md  README_GITHUB_WORKFLOWS.md  __init__.py  cli.py  file_memory_api.py  file_memory_client.py  github_workflow_generator.py  runner.py  terminal.py
core/: ai.py  chat_processor.py  code_engineer.py  comment_formatter.py  decision.py  diff.py  file_fetcher.py  file_manager.py  file_memory.py  file_selector.py  git_manager.py  log_config.py  log_manager.py  prompt_generator.py  terminal.py  version_manager.py  workflow_engine.py
examples/: README.md  README_VERSION_EXAMPLES.md  example_chat_process.py  example_code_generate.py  example_decision_process.py  example_file_memory_client.py  example_log_manager.py  example_terminal.py  example_version_manager.py  example_workflow.py  run_from_cli.py
examples/advanced/: custom_workflow.py  decision_workflow_integration.py  version_integration_example.py  version_rollback_example.py
examples/advanced/requirements/: feature_request.txt
scripts/: generate_workflows.sh  init_file_memory.sh  run_bot.sh
tests/: test_git_manager.py
